environements/dev/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  securityContext:
    runAsNoRoot: true
    readOnlyRootFileSystem: true
    allowPriviligeEscalation: false
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
    supplementalGroups: [4000]
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: abdelhak245/microservice-users:1.0
        ports:
        - containerPort: 8082
