environements/dev/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
